CKAD/08 Managing Networking/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywebserver
spec:
  selector:
    app: my-dep
  ports:
  - port: 80
    name: whatever
  type: NodePort
