CKAD/08 Managing Networking/pods-with-nw-policy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: database-prod
  namespace: default
  labels:
    app: database
spec:
  containers:
  - name: database
    image: alpine

---

apiVersion: v1
kind: Pod
metadata:
  name: web-prod
  namespace: default
  labels:
    app: web
spec:
  containers:
  - name: web
    image: alpine

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-networkpolicy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: database
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: web
